--- a/geschichte.html
+++ b/geschichte.html
@@ -20,7 +20,7 @@
       <a href="termine.html">Termine & Orte</a>
       <a href="anmeldung.html">Anmeldung zur Feier</a>
       <a href="ablaufplan.html" id="ablaufplanLink" style="display:none;">Ablaufplan</a>
-      <a href="buffet.html" id="buffetLink" style="display:none;">Buffet</a>
+      <a href="buffet.html" id="buffetLink" style="display:none;">Buffet Menü</a>
       <a href="fotos.html">Fotos</a>
       <a href="gaestebuch.html" id="guestbookLink" style="display:none;">Gästebuch</a>
       <a href="danksagung.html" id="danksagungLink" style="display:none;">Danksagung</a>
@@ -29,98 +29,14 @@
   </header>
 
   <main>
-    <section class="story-hero">
-      <div class="story-content">
-        <div class="story-icon">💕</div>
-        <h1>Unsere Geschichte</h1>
-        <p class="story-lead">Die Geschichte von zwei Menschen, die sich gefunden haben und nun ein gemeinsames Leben beginnen.</p>
-      </div>
-    </section>
-
-    <!-- GESCHICHTE_CONTENT_START -->
-    <section class="story-timeline">
-      <div class="story-intro">
-        <h2>Wie alles begann</h2>
-        <p>Jede große Liebe beginnt mit einer kleinen Geschichte. Hier ist unsere...</p>
-      </div>
-
-      <div class="story-container">
-        <article class="story-item left">
-          <div class="story-badge">
-            <span class="story-emoji">✨</span>
-            <span class="story-year">2018</span>
-          </div>
-          <div class="story-content-box">
-            <h3>Das erste Kennenlernen</h3>
-            <p>Unsere Wege kreuzten sich nicht auf dem normalen Weg, sondern Online.</p>          </div>
-        </article>
-
-        <article class="story-item right">
-          <div class="story-badge">
-            <span class="story-emoji">❤️</span>
-            <span class="story-year">2019</span>
-          </div>
-          <div class="story-content-box">
-            <h3>Das erste Treffen</h3>
-            <p>War ein riskantes Unterfangen für Jenica.</p>
-          </div>
-        </article>
-
-        <article class="story-item left">
-          <div class="story-badge">
-            <span class="story-emoji">🌟</span>
-            <span class="story-year">2020</span>
-          </div>
-          <div class="story-content-box">
-            <h3>Unser erstes Zuhause</h3>
-            <p>Christian zog aus Templin nach Kaiserslautern.</p>
-          </div>
-        </article>
-
-        <article class="story-item right">
-          <div class="story-badge">
-            <span class="story-emoji">🏡</span>
-            <span class="story-year">2021</span>
-          </div>
-          <div class="story-content-box">
-            <h3>Der Beginn von was ganz neuen für Christian</h3>
-            <p>Christian zog aus Templin nach Kaiserslautern.</p>
-          </div>
-        </article>
-
-        <article class="story-item left">
-          <div class="story-badge">
-            <span class="story-emoji">💍</span>
-            <span class="story-year">2024</span>
-          </div>
-          <div class="story-content-box">
-            <h3>Der Antrag</h3>
-            <p>An einem unvergesslichen Moment kniete einer von uns nieder und stellte die wichtigste Frage. Die Antwort war ein überglückliches "Ja!" und der Beginn unserer Reise zur Ehe.</p>
-          </div>
-        </article>
-
-        <article class="story-item right featured">
-          <div class="story-badge">
-            <span class="story-emoji">💒</span>
-            <span class="story-year">2026</span>
-          </div>
-          <div class="story-content-box">
-            <h3>Unsere Hochzeit</h3>
-            <p>Und nun sind wir hier – bereit, vor Familie und Freunden unser ewiges Ja-Wort zu geben und den nächsten Lebensabschnitt gemeinsam zu beginnen.</p>
-          </div>
-        </article>
-      </div>
-    </section>
-    <!-- GESCHICHTE_CONTENT_END -->
-
-    <section class="story-quote">
-      <div class="quote-box">
-        <div class="quote-icon">💝</div>
-        <blockquote>
-          <p>"Die besten Dinge im Leben sind die Menschen, die wir lieben, die Orte, die wir gesehen haben, und die Erinnerungen, die wir auf dem Weg gemacht haben."</p>
-        </blockquote>
-        <p class="quote-signature">— Unbekannt</p>
-      </div>
+    <section>
+      <!-- GESCHICHTE_CONTENT_START -->
+      <h2>Unsere Geschichte</h2>
+      <p class="wip-message">
+        🚧 Diese Seite befindet sich noch im Aufbau 🚧
+      </p>
+      <p class="wip-text">Wir arbeiten gerade an dieser Seite. Schaut bald wieder vorbei!</p>
+      <!-- GESCHICHTE_CONTENT_END -->
     </section>
   </main>
 
