--- a/termine.html
+++ b/termine.html
@@ -20,7 +20,7 @@
       <a href="termine.html">Termine & Orte</a>
       <a href="anmeldung.html">Anmeldung zur Feier</a>
       <a href="ablaufplan.html" id="ablaufplanLink" style="display:none;">Ablaufplan</a>
-      <a href="buffet.html" id="buffetLink" style="display:none;">Buffet</a>
+      <a href="buffet.html" id="buffetLink" style="display:none;">Buffet Menü</a>
       <a href="fotos.html">Fotos</a>
       <a href="gaestebuch.html" id="guestbookLink" style="display:none;">Gästebuch</a>
       <a href="danksagung.html" id="danksagungLink" style="display:none;">Danksagung</a>
@@ -28,91 +28,18 @@
     </nav>
   </header>
 
-  <main>
-    <section class="events-hero">
-      <div class="events-content">
-        <div class="events-icon">📅</div>
-        <h1>Termine & Orte</h1>
-        <p class="events-lead">Hier findet ihr alle wichtigen Informationen zu unserer Hochzeit – wann und wo wir feiern.</p>
-      </div>
+    <main>
+    <section>
+      <h2>Trauung</h2>
+      <p>Die Trauung wird im engsten Familien- und Freundeskreis stattfinden. Wir bitten um Verständnis, dass wir hier keine weiteren Gäste einladen können. Die Zeremonie findet am 15.05.2026 um 10:30 Uhr im Standesamt Kaiserslautern statt.</
+      </p>
     </section>
 
-    <section class="wedding-overview">
-      <div class="overview-date">
-        <h2>Unser Hochzeitstag</h2>
-        <div class="big-date">
-          <span class="big-day">15</span>
-          <span class="big-month">Mai</span>
-          <span class="big-year">2026</span>
-        </div>
-      </div>
-    </section>
-
-    <section class="events-section">
-        <article class="event-card">
-          <div class="event-icon">💍</div>
-          <h3>Trauung</h3>
-          <p class="event-description">Die Trauung wird im engsten Familien- und Freundeskreis stattfinden. Wir bitten um Verständnis, dass wir hier keine weiteren Gäste einladen können.</p>
-          <div class="event-details">
-            <div class="detail-item">
-              <span class="detail-icon">📅</span>
-              <span><strong>Datum:</strong> 15. Mai 2026</span>
-            </div>
-            <div class="detail-item">
-              <span class="detail-icon">🕙</span>
-              <span><strong>Uhrzeit:</strong> 10:30 Uhr</span>
-            </div>
-            <div class="detail-item">
-              <span class="detail-icon">📍</span>
-              <span><strong>Ort:</strong> Standesamt Kaiserslautern</span>
-            </div>
-          </div>
-          <div class="event-badge">Nur geladene Gäste</div>
-        </article>
-
-        <article class="event-card featured">
-          <div class="event-icon">🥂</div>
-          <div class="featured-badge">Ihr seid eingeladen!</div>
-          <h3>Sektempfang & Feier</h3>
-          <p class="event-description">Feiert mit uns! Nach der Trauung laden wir euch herzlich zum Sektempfang und zur anschließenden Feier ein. Lasst uns gemeinsam diesen besonderen Tag genießen!</p>
-          <div class="event-details">
-            <div class="detail-item">
-              <span class="detail-icon">📅</span>
-              <span><strong>Datum:</strong> 15. Mai 2026</span>
-            </div>
-            <div class="detail-item">
-              <span class="detail-icon">🕛</span>
-              <span><strong>Uhrzeit:</strong> ab 12:00 Uhr</span>
-            </div>
-            <div class="detail-item">
-              <span class="detail-icon">📍</span>
-              <span><strong>Ort:</strong> Katholisches Pfarrheim Dansenberg</span>
-            </div>
-          </div>
-          <a href="https://www.google.com/maps/search/?api=1&query=Katholisches+Pfarrheim+Dansenberg" target="_blank" class="map-button">
-            📍 Auf Google Maps ansehen
-          </a>
-        </article>
-    </section>
-
-    <section class="location-info">
-      <h2>Anfahrt & Parken</h2>
-      <div class="location-cards">
-        <div class="location-card">
-          <div class="location-card-icon">🚗</div>
-          <h3>Mit dem Auto</h3>
-          <p class="location-tip">Das Katholische Pfarrheim Dansenberg ist gut mit dem Auto erreichbar. Ausreichend Parkplätze sind vorhanden.</p>
-          <p class="location-tip">💡 Tipp: Bildet gerne Fahrgemeinschaften!</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="arrival-note">
-      <div class="note-box">
-        <div class="note-icon">⏰</div>
-        <h3>Bitte kommt pünktlich!</h3>
-        <p>Plant genügend Zeit für die Anfahrt ein, damit wir pünktlich beginnen können. Wir freuen uns auf euch!</p>
-      </div>
+    <section>
+      <h2>Sektempfang & Feier</h2>
+      <p>Datum & Uhrzeit: 15.05.2026, 12:00 Uhr</p>
+      <p>Ort: Katholisches Pfarrheim Dansenberg</p>
+      <a href="https://www.google.com/maps/search/?api=1&query=Katholisches+Pfarrheim+Dansenberg" target="_blank">Karte ansehen</a>
     </section>
   </main>
 
