--- a/fotos.html
+++ b/fotos.html
@@ -20,7 +20,7 @@
       <a href="termine.html">Termine & Orte</a>
       <a href="anmeldung.html">Anmeldung zur Feier</a>
       <a href="ablaufplan.html" id="ablaufplanLink" style="display:none;">Ablaufplan</a>
-      <a href="buffet.html" id="buffetLink" style="display:none;">Buffet Menü</a>
+      <a href="buffet.html" id="buffetLink" style="display:none;">Buffet</a>
       <a href="fotos.html">Fotos</a>
       <a href="gaestebuch.html" id="guestbookLink" style="display:none;">Gästebuch</a>
       <a href="danksagung.html" id="danksagungLink" style="display:none;">Danksagung</a>
@@ -30,17 +30,86 @@
 
 
   <main>
+    <section class="gallery-hero">
+      <div class="gallery-content">
+        <div class="gallery-icon">📸</div>
+        <h1>Unsere Hochzeitsfotos</h1>
+        <p class="gallery-lead">Teilt eure schönsten Momente mit uns! Alle Fotos werden in unserem gemeinsamen Album gesammelt.</p>
+      </div>
+    </section>
 
-  <section>
-    <h2>Galerie</h2>
-    <p>Alle Fotos sind in unserem gemeinsamen Fotoalbum gesammelt.</p>
-    <p style="margin-top: 1.5rem;">
-      <a href="https://photos.app.goo.gl/TNup4TKHrsxtD7hz8" target="_blank" style="display: inline-block; padding: 0.7rem 1.5rem; background-color: #6B8E72; color: white; text-decoration: none; border-radius: 12px; font-weight: bold; transition: 0.3s;">
-        Fotos anschauen
-      </a>
-    </p>
-  </section>
+    <section class="photo-instructions">
+      <h2>So könnt ihr Fotos teilen</h2>
+      
+      <div class="instruction-cards">
+        <article class="instruction-card">
+          <div class="instruction-number">1</div>
+          <h3>Album öffnen</h3>
+          <p>Klickt auf den Button unten, um zu unserem Google Photos Album zu gelangen.</p>
+        </article>
 
+        <article class="instruction-card">
+          <div class="instruction-number">2</div>
+          <h3>Fotos hochladen</h3>
+          <p>Nutzt die "Hinzufügen" Funktion in Google Photos, um eure Bilder und Videos zu teilen.</p>
+        </article>
+
+        <article class="instruction-card">
+          <div class="instruction-number">3</div>
+          <h3>Erlebnisse teilen</h3>
+          <p>Ladet alle lustigen, emotionalen und besonderen Momente hoch - wir freuen uns über jedes Bild!</p>
+        </article>
+      </div>
+    </section>
+
+    <section class="album-access">
+      <div class="album-box">
+        <div class="album-icon">🖼️</div>
+        <h2>Hochzeitsalbum 2026</h2>
+        <p>Hier findet ihr alle gesammelten Erinnerungen unserer Hochzeit. Schaut regelmäßig vorbei - es werden ständig neue Fotos hochgeladen!</p>
+        
+        <div class="album-stats">
+          <div class="stat-item">
+            <span class="stat-icon">📷</span>
+            <span class="stat-label">Gemeinsames Album</span>
+          </div>
+          <div class="stat-item">
+            <span class="stat-icon">☁️</span>
+            <span class="stat-label">Unbegrenzter Speicher</span>
+          </div>
+          <div class="stat-item">
+            <span class="stat-icon">💝</span>
+            <span class="stat-label">Für immer gespeichert</span>
+          </div>
+        </div>
+
+        <a href="https://photos.app.goo.gl/TNup4TKHrsxtD7hz8" target="_blank" class="album-button">
+          Album öffnen & Fotos teilen
+        </a>
+      </div>
+    </section>
+
+    <section class="photo-tips">
+      <h2>💡 Tipps für tolle Fotos</h2>
+      <div class="tips-grid">
+        <div class="tip-item">
+          <span class="tip-emoji">🌅</span>
+          <p>Nutzt das natürliche Licht für schöne Aufnahmen</p>
+        </div>
+        <div class="tip-item">
+          <span class="tip-emoji">😊</span>
+          <p>Spontane Momente sind oft die schönsten</p>
+        </div>
+        <div class="tip-item">
+          <span class="tip-emoji">🎥</span>
+          <p>Auch kurze Videos sind herzlich willkommen</p>
+        </div>
+        <div class="tip-item">
+          <span class="tip-emoji">👥</span>
+          <p>Gruppenfotos und Einzelportraits - beides ist toll!</p>
+        </div>
+      </div>
+    </section>
   </main>
 
 <footer>
