--- a/anmeldung.html
+++ b/anmeldung.html
@@ -20,7 +20,7 @@
       <a href="termine.html">Termine & Orte</a>
       <a href="anmeldung.html">Anmeldung zur Feier</a>
       <a href="ablaufplan.html" id="ablaufplanLink" style="display:none;">Ablaufplan</a>
-      <a href="buffet.html" id="buffetLink" style="display:none;">Buffet Menü</a>
+      <a href="buffet.html" id="buffetLink" style="display:none;">Buffet</a>
       <a href="fotos.html">Fotos</a>
       <a href="gaestebuch.html" id="guestbookLink" style="display:none;">Gästebuch</a>
       <a href="danksagung.html" id="danksagungLink" style="display:none;">Danksagung</a>
@@ -30,16 +30,85 @@
 
 
   <main>
-  <section>
-    <h2>Anmeldung zur Feier</h2>
-    <p>Wir freuen uns sehr, wenn ihr dabei seid! Bitte gebt uns bis zum 01.05.2026 Bescheid, ob ihr an unserer Hochzeit teilnehmen könnt. Falls ihr Begleitung oder Kinder mitbringt, teilt uns das gerne mit.</p>
-    <p style="margin-top: 1.5rem;">
-      <a href="https://forms.gle/463BPKHDS6VtZtTo7" target="_blank" style="display: inline-block; padding: 0.7rem 1.5rem; background-color: #6B8E72; color: white; text-decoration: none; border-radius: 12px; font-weight: bold; transition: 0.3s;">
-        Jetzt anmelden
-      </a>
-    </p>
-  </section>
+    <section class="rsvp-hero">
+      <div class="rsvp-content">
+        <div class="rsvp-icon">✨</div>
+        <h1>Anmeldung zur Feier</h1>
+        <p class="rsvp-lead">Wir würden uns riesig freuen, wenn ihr unseren großen Tag mit uns feiert! Bitte gebt uns bis zum 01. Mai 2026 Bescheid.</p>
+      </div>
+    </section>
 
+    <section class="rsvp-info">
+      <h2>Wichtige Informationen</h2>
+      <div class="rsvp-cards">
+        <div class="rsvp-card">
+          <div class="rsvp-card-icon">📅</div>
+          <h3>Anmeldefrist</h3>
+          <p>Bitte meldet euch bis spätestens <strong>01. Mai 2026</strong> an, damit wir besser planen können.</p>
+        </div>
+        <div class="rsvp-card">
+          <div class="rsvp-card-icon">👥</div>
+          <h3>Begleitung</h3>
+          <p>Wenn ihr Begleitung oder Kinder mitbringt, gebt dies bitte bei der Anmeldung an.</p>
+        </div>
+        <div class="rsvp-card">
+          <div class="rsvp-card-icon">🍽️</div>
+          <h3>Besondere Wünsche</h3>
+          <p>Allergien oder vegetarische/vegane Ernährung? Teilt uns eure Wünsche gerne mit!</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="rsvp-form-section">
+      <div class="rsvp-box">
+        <div class="rsvp-box-icon">💌</div>
+        <h2>Jetzt zur Hochzeit anmelden</h2>
+        <p class="rsvp-box-text">Nutzt unser Online-Formular, um uns eure Teilnahme zu bestätigen. Es dauert nur wenige Minuten und hilft uns bei der Planung enorm!</p>
+        
+        <div class="rsvp-features">
+          <div class="rsvp-feature">
+            <span class="feature-check">✓</span>
+            <span>Schnell & einfach</span>
+          </div>
+          <div class="rsvp-feature">
+            <span class="feature-check">✓</span>
+            <span>Alle wichtigen Infos an einem Ort</span>
+          </div>
+          <div class="rsvp-feature">
+            <span class="feature-check">✓</span>
+            <span>Sofortige Bestätigung</span>
+          </div>
+        </div>
+
+        <a href="https://forms.gle/463BPKHDS6VtZtTo7" target="_blank" class="rsvp-button">
+          Zum Anmeldeformular
+        </a>
+        
+        <p class="rsvp-note">📝 Das Formular öffnet sich in einem neuen Fenster</p>
+      </div>
+    </section>
+
+    <section class="rsvp-faq">
+      <h2>Häufige Fragen</h2>
+      <div class="faq-grid">
+        <div class="faq-item">
+          <h3>❓ Was passiert nach der Anmeldung?</h3>
+          <p>Ihr erhaltet eine Bestätigung und weitere Details werden euch rechtzeitig vor der Hochzeit zugeschickt.</p>
+        </div>
+        <div class="faq-item">
+          <h3>❓ Kann ich meine Anmeldung ändern?</h3>
+          <p>Natürlich! Schreibt uns einfach eine Nachricht oder meldet euch erneut über das Formular.</p>
+        </div>
+        <div class="faq-item">
+          <h3>❓ Was ist mit Geschenken?</h3>
+          <p>Eure Anwesenheit ist das größte Geschenk! Wenn ihr uns etwas schenken möchtet, freuen wir uns über einen Beitrag zu unserer Hochzeitsreise.</p>
+        </div>
+        <div class="faq-item">
+          <h3>❓ Gibt es einen Dresscode?</h3>
+          <p>Festliche Kleidung ist erwünscht. Mehr Details findet ihr im Ablaufplan, der ab Mai verfügbar ist.</p>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
